yac.output
Terminals which are not used

   IN
   PACKED
   SET
   WITH


State 53 conflicts: 2 shift/reduce
State 185 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program_head routine DOT

    2 program_head: PROGRAM NAME SEMI

    3 routine: routine_head routine_body

    4 sub_routine: routine_head routine_body

    5 routine_head: label_part const_part type_part var_part routine_part

    6 label_part: epsilon

    7 const_part: CONST const_expr_list
    8           | epsilon

    9 const_expr_list: const_expr_list NAME EQUAL const_value SEMI
   10                | NAME EQUAL const_value SEMI

   11 const_value: INTEGER
   12            | REAL
   13            | CHAR
   14            | STRING
   15            | SYS_CON

   16 type_part: TYPE type_decl_list
   17          | epsilon

   18 type_decl_list: type_decl_list type_definition
   19               | type_definition

   20 type_definition: NAME EQUAL type_decl SEMI

   21 type_decl: simple_type_decl
   22          | array_type_decl
   23          | record_type_decl

   24 simple_type_decl: SYS_TYPE
   25                 | NAME
   26                 | LP name_list RP
   27                 | const_value DOTDOT const_value
   28                 | MINUS const_value DOTDOT const_value
   29                 | MINUS const_value DOTDOT MINUS const_value
   30                 | NAME DOTDOT NAME

   31 array_type_decl: ARRAY LB simple_type_decl RB OF type_decl

   32 record_type_decl: RECORD field_decl_list END

   33 field_decl_list: field_decl_list field_decl
   34                | field_decl

   35 field_decl: name_list COLON type_decl SEMI

   36 name_list: name_list COMMA NAME
   37          | NAME

   38 var_part: VAR var_decl_list
   39         | epsilon

   40 var_decl_list: var_decl_list var_decl
   41              | var_decl

   42 var_decl: name_list COLON type_decl SEMI

   43 routine_part: routine_part function_decl
   44             | routine_part procedure_decl
   45             | function_decl
   46             | procedure_decl
   47             | epsilon

   48 function_decl: function_head SEMI sub_routine SEMI

   49 function_head: FUNCTION NAME parameters COLON simple_type_decl

   50 procedure_decl: procedure_head SEMI sub_routine SEMI

   51 procedure_head: PROCEDURE NAME parameters

   52 parameters: LP para_decl_list RP
   53           | epsilon

   54 para_decl_list: para_decl_list SEMI para_type_list
   55               | para_type_list

   56 para_type_list: var_para_list COLON simple_type_decl
   57               | val_para_list COLON simple_type_decl

   58 var_para_list: VAR name_list

   59 val_para_list: name_list

   60 routine_body: compound_stmt

   61 compound_stmt: BEGIN_T stmt_list END

   62 stmt_list: stmt_list stmt SEMI
   63          | epsilon

   64 stmt: INTEGER COLON non_label_stmt
   65     | non_label_stmt

   66 non_label_stmt: assign_stmt
   67               | proc_stmt
   68               | compound_stmt
   69               | if_stmt
   70               | repeat_stmt
   71               | while_stmt
   72               | for_stmt
   73               | case_stmt
   74               | goto_stmt

   75 assign_stmt: NAME ASSIGN expression
   76            | NAME LB expression RB ASSIGN expression
   77            | NAME DOT NAME ASSIGN expression

   78 proc_stmt: NAME
   79          | NAME LP args_list RP
   80          | SYS_PROC
   81          | SYS_PROC LP expression_list RP
   82          | READ LP factor RP

   83 if_stmt: IF expression THEN stmt else_clause

   84 else_clause: ELSE stmt
   85            | epsilon

   86 repeat_stmt: REPEAT stmt_list UNTIL expression

   87 while_stmt: WHILE expression DO stmt

   88 for_stmt: FOR NAME ASSIGN expression direction expression DO stmt

   89 direction: TO
   90          | DOWNTO

   91 case_stmt: CASE expression OF case_expr_list END

   92 case_expr_list: case_expr_list case_expr
   93               | case_expr

   94 case_expr: const_value COLON stmt SEMI
   95          | NAME COLON stmt SEMI

   96 goto_stmt: GOTO INTEGER

   97 expression_list: expression_list COMMA expression
   98                | expression

   99 expression: expression GE expr
  100           | expression GT expr
  101           | expression LE expr
  102           | expression LT expr
  103           | expression EQUAL expr
  104           | expression UNEQUAL expr
  105           | expr

  106 expr: expr PLUS term
  107     | expr MINUS term
  108     | expr OR term
  109     | term

  110 term: term MUL factor
  111     | term DIV factor
  112     | term MOD factor
  113     | term AND factor
  114     | factor

  115 factor: NAME
  116       | NAME LP args_list RP
  117       | SYS_FUNCT
  118       | SYS_FUNCT LP args_list RP
  119       | const_value
  120       | LP expression RP
  121       | NOT factor
  122       | MINUS factor
  123       | NAME LB expression RB
  124       | NAME DOT NAME

  125 args_list: args_list COMMA expression
  126          | expression

  127 epsilon: /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
NAME (258) 2 9 10 20 25 30 36 37 49 51 75 76 77 78 79 88 95 115 116
    123 124
INTEGER (259) 11 64 96
REAL (260) 12
CHAR (261) 13
STRING (262) 14
LP (263) 26 52 79 81 82 116 118 120
RP (264) 26 52 79 81 82 116 118 120
LB (265) 31 76 123
RB (266) 31 76 123
DOT (267) 1 77 124
COMMA (268) 36 97 125
COLON (269) 35 42 49 56 57 64 94 95
MUL (270) 110
DIV (271) 111
UNEQUAL (272) 104
NOT (273) 121
PLUS (274) 106
MINUS (275) 28 29 107 122
GE (276) 99
GT (277) 100
LE (278) 101
LT (279) 102
EQUAL (280) 9 10 20 103
ASSIGN (281) 75 76 77 88
MOD (282) 112
DOTDOT (283) 27 28 29 30
SEMI (284) 2 9 10 20 35 42 48 50 54 62 94 95
SYS_CON (285) 15
SYS_FUNCT (286) 117 118
SYS_PROC (287) 80 81
SYS_TYPE (288) 24
READ (289) 82
AND (290) 113
ARRAY (291) 31
BEGIN_T (292) 61
END (293) 32 61 91
CASE (294) 91
CONST (295) 7
DO (296) 87 88
DOWNTO (297) 90
ELSE (298) 84
FOR (299) 88
FUNCTION (300) 49
GOTO (301) 96
IF (302) 83
IN (303)
OF (304) 31 91
OR (305) 108
PACKED (306)
PROCEDURE (307) 51
PROGRAM (308) 2
RECORD (309) 32
REPEAT (310) 86
SET (311)
THEN (312) 83
TO (313) 89
TYPE (314) 16
UNTIL (315) 86
VAR (316) 38 58
WHILE (317) 87
WITH (318)


Nonterminals, with rules where they appear

$accept (64)
    on left: 0
program (65)
    on left: 1, on right: 0
program_head (66)
    on left: 2, on right: 1
routine (67)
    on left: 3, on right: 1
sub_routine (68)
    on left: 4, on right: 48 50
routine_head (69)
    on left: 5, on right: 3 4
label_part (70)
    on left: 6, on right: 5
const_part (71)
    on left: 7 8, on right: 5
const_expr_list (72)
    on left: 9 10, on right: 7 9
const_value (73)
    on left: 11 12 13 14 15, on right: 9 10 27 28 29 94 119
type_part (74)
    on left: 16 17, on right: 5
type_decl_list (75)
    on left: 18 19, on right: 16 18
type_definition (76)
    on left: 20, on right: 18 19
type_decl (77)
    on left: 21 22 23, on right: 20 31 35 42
simple_type_decl (78)
    on left: 24 25 26 27 28 29 30, on right: 21 31 49 56 57
array_type_decl (79)
    on left: 31, on right: 22
record_type_decl (80)
    on left: 32, on right: 23
field_decl_list (81)
    on left: 33 34, on right: 32 33
field_decl (82)
    on left: 35, on right: 33 34
name_list (83)
    on left: 36 37, on right: 26 35 36 42 58 59
var_part (84)
    on left: 38 39, on right: 5
var_decl_list (85)
    on left: 40 41, on right: 38 40
var_decl (86)
    on left: 42, on right: 40 41
routine_part (87)
    on left: 43 44 45 46 47, on right: 5 43 44
function_decl (88)
    on left: 48, on right: 43 45
function_head (89)
    on left: 49, on right: 48
procedure_decl (90)
    on left: 50, on right: 44 46
procedure_head (91)
    on left: 51, on right: 50
parameters (92)
    on left: 52 53, on right: 49 51
para_decl_list (93)
    on left: 54 55, on right: 52 54
para_type_list (94)
    on left: 56 57, on right: 54 55
var_para_list (95)
    on left: 58, on right: 56
val_para_list (96)
    on left: 59, on right: 57
routine_body (97)
    on left: 60, on right: 3 4
compound_stmt (98)
    on left: 61, on right: 60 68
stmt_list (99)
    on left: 62 63, on right: 61 62 86
stmt (100)
    on left: 64 65, on right: 62 83 84 87 88 94 95
non_label_stmt (101)
    on left: 66 67 68 69 70 71 72 73 74, on right: 64 65
assign_stmt (102)
    on left: 75 76 77, on right: 66
proc_stmt (103)
    on left: 78 79 80 81 82, on right: 67
if_stmt (104)
    on left: 83, on right: 69
else_clause (105)
    on left: 84 85, on right: 83
repeat_stmt (106)
    on left: 86, on right: 70
while_stmt (107)
    on left: 87, on right: 71
for_stmt (108)
    on left: 88, on right: 72
direction (109)
    on left: 89 90, on right: 88
case_stmt (110)
    on left: 91, on right: 73
case_expr_list (111)
    on left: 92 93, on right: 91 92
case_expr (112)
    on left: 94 95, on right: 92 93
goto_stmt (113)
    on left: 96, on right: 74
expression_list (114)
    on left: 97 98, on right: 81 97
expression (115)
    on left: 99 100 101 102 103 104 105, on right: 75 76 77 83 86 87
    88 91 97 98 99 100 101 102 103 104 120 123 125 126
expr (116)
    on left: 106 107 108 109, on right: 99 100 101 102 103 104 105
    106 107 108
term (117)
    on left: 110 111 112 113 114, on right: 106 107 108 109 110 111
    112 113
factor (118)
    on left: 115 116 117 118 119 120 121 122 123 124,
    on right: 82 110 111 112 113 114 121 122
args_list (119)
    on left: 125 126, on right: 79 116 118 125
epsilon (120)
    on left: 127, on right: 6 8 17 39 47 53 63 85


state 0

    0 $accept: . program $end

    PROGRAM  shift, and go to state 1

    program       go to state 2
    program_head  go to state 3


state 1

    2 program_head: PROGRAM . NAME SEMI

    NAME  shift, and go to state 4


state 2

    0 $accept: program . $end

    $end  shift, and go to state 5


state 3

    1 program: program_head . routine DOT

    $default  reduce using rule 127 (epsilon)

    routine       go to state 6
    routine_head  go to state 7
    label_part    go to state 8
    epsilon       go to state 9


state 4

    2 program_head: PROGRAM NAME . SEMI

    SEMI  shift, and go to state 10


state 5

    0 $accept: program $end .

    $default  accept


state 6

    1 program: program_head routine . DOT

    DOT  shift, and go to state 11


state 7

    3 routine: routine_head . routine_body

    BEGIN_T  shift, and go to state 12

    routine_body   go to state 13
    compound_stmt  go to state 14


state 8

    5 routine_head: label_part . const_part type_part var_part routine_part

    CONST  shift, and go to state 15

    $default  reduce using rule 127 (epsilon)

    const_part  go to state 16
    epsilon     go to state 17


state 9

    6 label_part: epsilon .

    $default  reduce using rule 6 (label_part)


state 10

    2 program_head: PROGRAM NAME SEMI .

    $default  reduce using rule 2 (program_head)


state 11

    1 program: program_head routine DOT .

    $default  reduce using rule 1 (program)


state 12

   61 compound_stmt: BEGIN_T . stmt_list END

    $default  reduce using rule 127 (epsilon)

    stmt_list  go to state 18
    epsilon    go to state 19


state 13

    3 routine: routine_head routine_body .

    $default  reduce using rule 3 (routine)


state 14

   60 routine_body: compound_stmt .

    $default  reduce using rule 60 (routine_body)


state 15

    7 const_part: CONST . const_expr_list

    NAME  shift, and go to state 20

    const_expr_list  go to state 21


state 16

    5 routine_head: label_part const_part . type_part var_part routine_part

    TYPE  shift, and go to state 22

    $default  reduce using rule 127 (epsilon)

    type_part  go to state 23
    epsilon    go to state 24


state 17

    8 const_part: epsilon .

    $default  reduce using rule 8 (const_part)


state 18

   61 compound_stmt: BEGIN_T stmt_list . END
   62 stmt_list: stmt_list . stmt SEMI

    NAME      shift, and go to state 25
    INTEGER   shift, and go to state 26
    SYS_PROC  shift, and go to state 27
    READ      shift, and go to state 28
    BEGIN_T   shift, and go to state 12
    END       shift, and go to state 29
    CASE      shift, and go to state 30
    FOR       shift, and go to state 31
    GOTO      shift, and go to state 32
    IF        shift, and go to state 33
    REPEAT    shift, and go to state 34
    WHILE     shift, and go to state 35

    compound_stmt   go to state 36
    stmt            go to state 37
    non_label_stmt  go to state 38
    assign_stmt     go to state 39
    proc_stmt       go to state 40
    if_stmt         go to state 41
    repeat_stmt     go to state 42
    while_stmt      go to state 43
    for_stmt        go to state 44
    case_stmt       go to state 45
    goto_stmt       go to state 46


state 19

   63 stmt_list: epsilon .

    $default  reduce using rule 63 (stmt_list)


state 20

   10 const_expr_list: NAME . EQUAL const_value SEMI

    EQUAL  shift, and go to state 47


state 21

    7 const_part: CONST const_expr_list .
    9 const_expr_list: const_expr_list . NAME EQUAL const_value SEMI

    NAME  shift, and go to state 48

    $default  reduce using rule 7 (const_part)


state 22

   16 type_part: TYPE . type_decl_list

    NAME  shift, and go to state 49

    type_decl_list   go to state 50
    type_definition  go to state 51


state 23

    5 routine_head: label_part const_part type_part . var_part routine_part

    VAR  shift, and go to state 52

    $default  reduce using rule 127 (epsilon)

    var_part  go to state 53
    epsilon   go to state 54


state 24

   17 type_part: epsilon .

    $default  reduce using rule 17 (type_part)


state 25

   75 assign_stmt: NAME . ASSIGN expression
   76            | NAME . LB expression RB ASSIGN expression
   77            | NAME . DOT NAME ASSIGN expression
   78 proc_stmt: NAME .
   79          | NAME . LP args_list RP

    LP      shift, and go to state 55
    LB      shift, and go to state 56
    DOT     shift, and go to state 57
    ASSIGN  shift, and go to state 58

    $default  reduce using rule 78 (proc_stmt)


state 26

   64 stmt: INTEGER . COLON non_label_stmt

    COLON  shift, and go to state 59


state 27

   80 proc_stmt: SYS_PROC .
   81          | SYS_PROC . LP expression_list RP

    LP  shift, and go to state 60

    $default  reduce using rule 80 (proc_stmt)


state 28

   82 proc_stmt: READ . LP factor RP

    LP  shift, and go to state 61


state 29

   61 compound_stmt: BEGIN_T stmt_list END .

    $default  reduce using rule 61 (compound_stmt)


state 30

   91 case_stmt: CASE . expression OF case_expr_list END

    NAME       shift, and go to state 62
    INTEGER    shift, and go to state 63
    REAL       shift, and go to state 64
    CHAR       shift, and go to state 65
    STRING     shift, and go to state 66
    LP         shift, and go to state 67
    NOT        shift, and go to state 68
    MINUS      shift, and go to state 69
    SYS_CON    shift, and go to state 70
    SYS_FUNCT  shift, and go to state 71

    const_value  go to state 72
    expression   go to state 73
    expr         go to state 74
    term         go to state 75
    factor       go to state 76


state 31

   88 for_stmt: FOR . NAME ASSIGN expression direction expression DO stmt

    NAME  shift, and go to state 77


state 32

   96 goto_stmt: GOTO . INTEGER

    INTEGER  shift, and go to state 78


state 33

   83 if_stmt: IF . expression THEN stmt else_clause

    NAME       shift, and go to state 62
    INTEGER    shift, and go to state 63
    REAL       shift, and go to state 64
    CHAR       shift, and go to state 65
    STRING     shift, and go to state 66
    LP         shift, and go to state 67
    NOT        shift, and go to state 68
    MINUS      shift, and go to state 69
    SYS_CON    shift, and go to state 70
    SYS_FUNCT  shift, and go to state 71

    const_value  go to state 72
    expression   go to state 79
    expr         go to state 74
    term         go to state 75
    factor       go to state 76


state 34

   86 repeat_stmt: REPEAT . stmt_list UNTIL expression

    $default  reduce using rule 127 (epsilon)

    stmt_list  go to state 80
    epsilon    go to state 19


state 35

   87 while_stmt: WHILE . expression DO stmt

    NAME       shift, and go to state 62
    INTEGER    shift, and go to state 63
    REAL       shift, and go to state 64
    CHAR       shift, and go to state 65
    STRING     shift, and go to state 66
    LP         shift, and go to state 67
    NOT        shift, and go to state 68
    MINUS      shift, and go to state 69
    SYS_CON    shift, and go to state 70
    SYS_FUNCT  shift, and go to state 71

    const_value  go to state 72
    expression   go to state 81
    expr         go to state 74
    term         go to state 75
    factor       go to state 76


state 36

   68 non_label_stmt: compound_stmt .

    $default  reduce using rule 68 (non_label_stmt)


state 37

   62 stmt_list: stmt_list stmt . SEMI

    SEMI  shift, and go to state 82


state 38

   65 stmt: non_label_stmt .

    $default  reduce using rule 65 (stmt)


state 39

   66 non_label_stmt: assign_stmt .

    $default  reduce using rule 66 (non_label_stmt)


state 40

   67 non_label_stmt: proc_stmt .

    $default  reduce using rule 67 (non_label_stmt)


state 41

   69 non_label_stmt: if_stmt .

    $default  reduce using rule 69 (non_label_stmt)


state 42

   70 non_label_stmt: repeat_stmt .

    $default  reduce using rule 70 (non_label_stmt)


state 43

   71 non_label_stmt: while_stmt .

    $default  reduce using rule 71 (non_label_stmt)


state 44

   72 non_label_stmt: for_stmt .

    $default  reduce using rule 72 (non_label_stmt)


state 45

   73 non_label_stmt: case_stmt .

    $default  reduce using rule 73 (non_label_stmt)


state 46

   74 non_label_stmt: goto_stmt .

    $default  reduce using rule 74 (non_label_stmt)


state 47

   10 const_expr_list: NAME EQUAL . const_value SEMI

    INTEGER  shift, and go to state 63
    REAL     shift, and go to state 64
    CHAR     shift, and go to state 65
    STRING   shift, and go to state 66
    SYS_CON  shift, and go to state 70

    const_value  go to state 83


state 48

    9 const_expr_list: const_expr_list NAME . EQUAL const_value SEMI

    EQUAL  shift, and go to state 84


state 49

   20 type_definition: NAME . EQUAL type_decl SEMI

    EQUAL  shift, and go to state 85


state 50

   16 type_part: TYPE type_decl_list .
   18 type_decl_list: type_decl_list . type_definition

    NAME  shift, and go to state 49

    $default  reduce using rule 16 (type_part)

    type_definition  go to state 86


state 51

   19 type_decl_list: type_definition .

    $default  reduce using rule 19 (type_decl_list)


state 52

   38 var_part: VAR . var_decl_list

    NAME  shift, and go to state 87

    name_list      go to state 88
    var_decl_list  go to state 89
    var_decl       go to state 90


state 53

    5 routine_head: label_part const_part type_part var_part . routine_part

    FUNCTION   shift, and go to state 91
    PROCEDURE  shift, and go to state 92

    FUNCTION   [reduce using rule 127 (epsilon)]
    PROCEDURE  [reduce using rule 127 (epsilon)]
    $default   reduce using rule 127 (epsilon)
